# Integration-final

./: Makefile  Makefile.am  Makefile.in  README.md  coach.txt  config.h  config.status  configure  configure.in  equipements.txt  fitverse.glade  fitverse.glade.bak  fitverse.gladep  member.txt  project3.glade.bak  project5.glade  projectfinal.glade  projectfinal.gladep
Integration-final/: CHANGELOG_CRUD.md  Makefile  config.h  config.status  configure  configure.in  fitverse.glade  fitverse.glade.bak  fitverse.gladep
Integration-final/autom4te.cache/: output.0  requests  traces.0  traces.1
Integration-final/po/: Makefile  Makefile.in
Integration-final/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  cour.txt  cours  cours.c  cours.h  interface.c  interface.c.bak  interface.h  main.c  membre_tiec.txt
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Entraineur.c  Entraineur.h  InscriCoach.txt  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  centre.c  centre.h  centre.txt  centres.c  centres.h  disponibilites.txt  equipements.txt  evenement.c  evenement.h  fitverse  interface.c  interface.c.bak  interface.h  interface.h.bak  interface_equip.c  interface_equip.h  main.c  member.c  member.h  project5  projet6
src/.deps/: Entraineur.Po  callbacks.Po  centre.Po  centres.Po  evenement.Po  interface_equip.Po  main.Po  member.Po
